src/objects/Beer__c/fields/Alcohol__c.field-meta.xml
<CustomField>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>