src/objects/Beer__c/fields/Beer_Name__c.field-meta.xml
<CustomField>
        <fullName>Beer_Name__c</fullName>
        <label>Beer Name</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>