src/objects/Beer__c/fields/brewery_Id__c.field-meta.xml
<CustomField>
        <fullName>brewery_Id__c</fullName>
        <label>brewery_Id</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>