src/objects/Beer__c/fields/Price__c.field-meta.xml
<CustomField>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>