src/objects/Beer__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>