src/objects/Beer__c/fields/Tags__c.field-meta.xml
<CustomField>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>