src/objects/Beer__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>